
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ ESP_OK ;
 int WIFI_TXCB_EAPOL_ID ;
 int eapol_txcb ;
 scalar_t__ esp_wifi_register_tx_cb_internal (int ,int ) ;
 int wpa_config_assoc_ie ;
 int wpa_deauthenticate ;
 int wpa_get_key ;
 int wpa_install_key ;
 int wpa_neg_complete ;
 int wpa_sendto_wrapper ;
 int wpa_sm_init (int *,int ,int ,int ,int ,int ,int ) ;

bool wpa_attach(void)
{
    bool ret = 1;
    ret = wpa_sm_init(((void*)0), wpa_sendto_wrapper,
                 wpa_config_assoc_ie, wpa_install_key, wpa_get_key, wpa_deauthenticate, wpa_neg_complete);
    if(ret) {
        ret = (esp_wifi_register_tx_cb_internal(eapol_txcb, WIFI_TXCB_EAPOL_ID) == ESP_OK);
    }
    return ret;
}
