; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/esp_supplicant/extr_esp_wpa_main.c_wpa_attach.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/esp_supplicant/extr_esp_wpa_main.c_wpa_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wpa_sendto_wrapper = common dso_local global i32 0, align 4
@wpa_config_assoc_ie = common dso_local global i32 0, align 4
@wpa_install_key = common dso_local global i32 0, align 4
@wpa_get_key = common dso_local global i32 0, align 4
@wpa_deauthenticate = common dso_local global i32 0, align 4
@wpa_neg_complete = common dso_local global i32 0, align 4
@eapol_txcb = common dso_local global i32 0, align 4
@WIFI_TXCB_EAPOL_ID = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wpa_attach() #0 {
  %1 = alloca i32, align 4
  store i32 1, i32* %1, align 4
  %2 = load i32, i32* @wpa_sendto_wrapper, align 4
  %3 = load i32, i32* @wpa_config_assoc_ie, align 4
  %4 = load i32, i32* @wpa_install_key, align 4
  %5 = load i32, i32* @wpa_get_key, align 4
  %6 = load i32, i32* @wpa_deauthenticate, align 4
  %7 = load i32, i32* @wpa_neg_complete, align 4
  %8 = call i32 @wpa_sm_init(i32* null, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7)
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %0
  %12 = load i32, i32* @eapol_txcb, align 4
  %13 = load i32, i32* @WIFI_TXCB_EAPOL_ID, align 4
  %14 = call i64 @esp_wifi_register_tx_cb_internal(i32 %12, i32 %13)
  %15 = load i64, i64* @ESP_OK, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  store i32 %17, i32* %1, align 4
  br label %18

18:                                               ; preds = %11, %0
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @wpa_sm_init(i32*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @esp_wifi_register_tx_cb_internal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
